Inmemory Server Implementation